--- a/PingPong_404/PingPong_404.csproj
+++ b/PingPong_404/PingPong_404.csproj
@@ -69,7 +69,7 @@
       <DependentUpon>frmGameOver.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
